Project Completed Successfully

--- a/views/admin/bestProduct.ejs
+++ b/views/admin/bestProduct.ejs
@@ -57,7 +57,8 @@
                                         <%= index+1 %>
                                     </td>
                                     <td>
-                                        <img src="/<%= row.productImage[0] %>" width="55" class="img-thumbnail" alt="image">
+                                        <img src="/<%= row.productImage[0] %>" width="55" class="img-thumbnail"
+                                            alt="image">
                                     </td>
                                     <td>
                                         <%= row.productName %>
@@ -141,7 +142,8 @@
                                         <%= index+1 %>
                                     </td>
                                     <td>
-                                        <img src="/<%= row.productImage[0] %>" width="55" class="img-thumbnail" alt="image">
+                                        <img src="/<%= row.productImage[0] %>" width="55" class="img-thumbnail"
+                                            alt="image">
                                     </td>
                                     <td>
                                         <%= row.productName %>
