--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -12,7 +12,8 @@
 <body>
   <div class="container mt-5">
     <h2>Add Category</h2>
-    <form id="addCategoryForm" action="/admin/addCategory" method="POST" enctype="application/x-www-form-urlencoded" onsubmit="return validateForm()">
+    <form id="addCategoryForm" action="/admin/addCategory" method="POST" enctype="application/x-www-form-urlencoded"
+      onsubmit="return validateForm()">
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name" name="name" required>
@@ -25,15 +26,15 @@
       </div>
       <% if(catError){%>
         <div style="color: red; font-size: 16px; font-weight: bold;">
-            <%= catError%>
+          <%= catError%>
         </div>
             <%}%>
-        <div class="form-group ">
-          <label for="price">Discount:   (in Percentage)</label>
-          <input type="number" class="form-control" id="discount" name="discount" min="0" required>
-          <div id="discountError" class="text-danger"></div>
-        </div>
-      <button type="submit" class="btn btn-primary">Add Category</button>
+          <div class="form-group ">
+            <label for="price">Discount: (in Percentage)</label>
+            <input type="number" class="form-control" id="discount" name="discount" min="0" required>
+            <div id="discountError" class="text-danger"></div>
+          </div>
+          <button type="submit" class="btn btn-primary">Add Category</button>
     </form>
   </div>
 
