--- a/views/admin/updateCategory.ejs
+++ b/views/admin/updateCategory.ejs
@@ -12,7 +12,8 @@
 <body>
   <div class="container mt-5">
     <h2>Edit Category</h2>
-    <form id="editCategoryForm" action="/admin/updateCategory/<%= category._id %>" method="POST" enctype="application/x-www-form-urlencoded" onsubmit="return validateForm()">
+    <form id="editCategoryForm" action="/admin/updateCategory/<%= category._id %>" method="POST"
+      enctype="application/x-www-form-urlencoded" onsubmit="return validateForm()">
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name" name="name" value="<%= category.name %>" required>
@@ -20,20 +21,22 @@
       </div>
       <div class="form-group">
         <label for="description">Description:</label>
-        <textarea class="form-control" id="description" name="description" required><%= category.description %></textarea>
+        <textarea class="form-control" id="description" name="description"
+          required><%= category.description %></textarea>
         <div id="descriptionError" class="text-danger"></div>
       </div>
       <div class="form-group ">
-        <label for="price">Discount:   (in Percentage)</label>
-        <input type="number" class="form-control" id="discount" name="discount" min="0" value="<%=category.discount%>" required>
+        <label for="price">Discount: (in Percentage)</label>
+        <input type="number" class="form-control" id="discount" name="discount" min="0" value="<%=category.discount%>"
+          required>
         <div id="discountError" class="text-danger"></div>
       </div>
       <% if(catError){%>
         <div style="color: red; font-size: 16px; font-weight: bold;">
-            <%= catError%>
+          <%= catError%>
         </div>
             <%}%>
-      <button type="submit" class="btn btn-primary">Edit Category</button>
+          <button type="submit" class="btn btn-primary">Edit Category</button>
     </form>
   </div>
 
