--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -47,32 +47,35 @@
                         <form action="/login" method="post" onsubmit="return validateEmail()&&validatePassword()">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email:</label>
-                                <input type="email" class="form-control" id="email" name="email" onkeyup="validateEmail()" required>
+                                <input type="email" class="form-control" id="email" name="email"
+                                    onkeyup="validateEmail()" required>
                                 <div id="emailerror"></div>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password:</label>
-                                <input type="password" class="form-control" id="password" name="password" onkeyup="validatePassword()" required>
+                                <input type="password" class="form-control" id="password" name="password"
+                                    onkeyup="validatePassword()" required>
                                 <div id="passwordError"></div>
                             </div>
                             <button type="submit" class="btn btn-primary w-100">Login</button>
                             <a href="/forgotPassword" class="d-block mt-2"><u>Forgot Password</u></a>
                         </form>
                         <div class="mt-3">
-                            <% if(expressFlash.invalidpassword && expressFlash.invalidpassword.length > 0) { %>
+                            <% if(expressFlash.invalidpassword && expressFlash.invalidpassword.length> 0) { %>
                                 <div class="alert alert-danger" role="alert">
                                     <%= expressFlash.invalidpassword %>
                                 </div>
-                            <% } %>
-                            <% if(expressFlash.invaliduser && expressFlash.invaliduser.length > 0) { %>
-                                <div class="alert alert-danger" role="alert">
-                                    <%= expressFlash.invaliduser %>
-                                </div>
-                            <% } %>
+                                <% } %>
+                                    <% if(expressFlash.invaliduser && expressFlash.invaliduser.length> 0) { %>
+                                        <div class="alert alert-danger" role="alert">
+                                            <%= expressFlash.invaliduser %>
+                                        </div>
+                                        <% } %>
                         </div>
                         <hr>
                         <a href="/googleSignIn" class="btn btn-outline-danger w-100">
-                            <img src="../../static/images/New-Google-Logo.jpg" alt="Google Logo" class="google-logo"> Sign in with Google
+                            <img src="../../static/images/New-Google-Logo.jpg" alt="Google Logo" class="google-logo">
+                            Sign in with Google
                         </a>
                         <p class="text-center mt-3">Don't have an account? <a href="/signup">Sign Up</a></p>
                     </div>
