--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -37,61 +37,64 @@
 
 <body>
 
-<section class="profile-section">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="card">
-                    <div class="card-body">
-                        <h3 class="text-center mb-4">Change Password</h3>
-                        <form action="/passwordUpdating" method="post" onsubmit="return validatePassword()">
-                            <div class="form-group mb-3">
-                                <label for="currentPassword" class="form-label">Current Password:</label>
-                                <input type="password" class="form-control" id="currentPassword" name="pass" required>
-                                <% if(pass && pass.length > 0){ %>
-                                    <div style="color: red; font-size: 16px; font-weight: bold;">
-                                        <%= pass %>
-                                    </div>
-                                <% } %>
-                            </div>
-                            <div class="form-group mb-3">
-                                <label for="newPassword" class="form-label">New Password:</label>
-                                <input type="password" class="form-control" id="password" name="npass" onkeyup="validatePassword()" required>
-                                <span id="passwordError"></span>
-                            </div>
-                            <div class="form-group mb-3">
-                                <label for="confirmPassword" class="form-label">Confirm Password:</label>
-                                <input type="password" class="form-control" id="confirmPassword" name="cpass" required>
-                            </div>
-                            <div class="form-group text-center">
-                                <button type="submit" class="btn btn-primary w-100">Update</button>
-                            </div>
-                        </form>
+    <section class="profile-section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="text-center mb-4">Change Password</h3>
+                            <form action="/passwordUpdating" method="post" onsubmit="return validatePassword()">
+                                <div class="form-group mb-3">
+                                    <label for="currentPassword" class="form-label">Current Password:</label>
+                                    <input type="password" class="form-control" id="currentPassword" name="pass"
+                                        required>
+                                    <% if(pass && pass.length> 0){ %>
+                                        <div style="color: red; font-size: 16px; font-weight: bold;">
+                                            <%= pass %>
+                                        </div>
+                                        <% } %>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label for="newPassword" class="form-label">New Password:</label>
+                                    <input type="password" class="form-control" id="password" name="npass"
+                                        onkeyup="validatePassword()" required>
+                                    <span id="passwordError"></span>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label for="confirmPassword" class="form-label">Confirm Password:</label>
+                                    <input type="password" class="form-control" id="confirmPassword" name="cpass"
+                                        required>
+                                </div>
+                                <div class="form-group text-center">
+                                    <button type="submit" class="btn btn-primary w-100">Update</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<script>
-    function validatePassword() {
-        var passwordError = document.getElementById('passwordError');
-        var password = document.getElementById('password').value;
+    </section>
+    <script>
+        function validatePassword() {
+            var passwordError = document.getElementById('passwordError');
+            var password = document.getElementById('password').value;
 
-        if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
-            passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
-                '- At least 8 characters in length<br>' +
-                '- At least one letter (uppercase or lowercase)<br>' +
-                '- At least one digit<br>' +
-                '- At least one symbol';
-            return false;
-        } else {
-            passwordError.innerHTML = '';
-            return true;
-        }
-    } 
-</script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+            if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
+                passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
+                    '- At least 8 characters in length<br>' +
+                    '- At least one letter (uppercase or lowercase)<br>' +
+                    '- At least one digit<br>' +
+                    '- At least one symbol';
+                return false;
+            } else {
+                passwordError.innerHTML = '';
+                return true;
+            }
+        } 
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
     <script src="../../static/js/magiczoom.js"></script>
     <script src="../static/js/jquery-3.3.1.min.js"></script>
@@ -107,4 +110,3 @@
 </body>
 
 </html>
-
