--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -31,8 +31,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 100%; 
-            border-radius: 8px; 
+            width: 100%;
+            border-radius: 8px;
         }
     </style>
 
@@ -72,29 +72,29 @@
                             </div>
                             <div class="mb-3">
                                 <label class="form-label" for="confirm-password">Confirm Password:</label>
-                                <input class="form-control" type="password" id="confirm-password"
-                                    name="confirmPassword" required>
+                                <input class="form-control" type="password" id="confirm-password" name="confirmPassword"
+                                    required>
                             </div>
                             <button class="btn btn-primary w-100" type="submit">Signup</button>
                             <% if(expressFlash.passworderror&&expressFlash.passworderror.length>0){%>
-                            <div style="color: red; font-size: 16px; font-weight: bold;">
-                                <%= expressFlash.passworderror%>
-                            </div>
-                            <%}%>
-                            <% if(expressFlash.emailerror&&expressFlash.emailerror.length>0){%>
-                            <div style="color: red; font-size: 16px; font-weight: bold;">
-                                <%= expressFlash.emailerror%>
-                            </div>
-                            <%}%>
+                                <div style="color: red; font-size: 16px; font-weight: bold;">
+                                    <%= expressFlash.passworderror%>
+                                </div>
+                                <%}%>
+                                    <% if(expressFlash.emailerror&&expressFlash.emailerror.length>0){%>
+                                        <div style="color: red; font-size: 16px; font-weight: bold;">
+                                            <%= expressFlash.emailerror%>
+                                        </div>
+                                        <%}%>
                         </form>
                         <p class="signupLoginQuestion text-center mt-3">Already have an account? <a href="/login"
-                        class="signupLogin">Login</a></p>
+                                class="signupLogin">Login</a></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <script>
         function validateUsername() {
             var usernameError = document.getElementById('usernameerror');
