--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -8,25 +8,38 @@
       </div>
     </div>
   </div>
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-12">
+  <div class="container mt-4 ">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
         <div class="account-container shadow p-4">
           <header class="account-header mb-4">
             <h1 class="text-center">My Account</h1>
           </header>
           <main class="account-main">
             <section class="user-info mb-4">
-              <h2>User Information</h2>
-              <div class="card">
-                <div class="card-body">
-                  <p><b>Username:</b>
-                    <%= name %>
-                  </p>
-                  <p><b>Email:</b>
-                    <%= email %>
-                  </p>
-                  <!-- Add more user details here -->
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-md-8">
+                    <div class="card bg-light border-primary rounded shadow">
+                      <div class="card-body text-center">
+                        <h2 class="account-header mb-4">User Information</h2>
+                        <div class="mb-3">
+                          <div class="d-flex align-items-center">
+                            <i class="fas fa-user icon me-2" style="font-size: 1.3rem;"></i>
+                            <p class="mb-0"><strong>Username:</strong>
+                              <%= name %>
+                            </p>
+                          </div>
+                          <div class="d-flex align-items-center mt-3">
+                            <i class="fas fa-envelope icon me-2" style="font-size: 1.3rem;"></i>
+                            <p class="mb-0"><strong>Email:</strong>
+                              <%= email %>
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </section>
@@ -45,7 +58,7 @@
                       <a href="/resetpassword" class="btn btn-secondary w-100">Reset Password</a>
                     </li>
                     <li class="mb-2">
-                      <a href="#" class="btn btn-info w-100">Coupons</a>
+                      <a href="/coupons" class="btn btn-info w-100">Coupons</a>
                     </li>
                     <li class="mb-2">
                       <a href="/wallet" class="btn btn-success w-100">Wallet</a>
@@ -64,4 +77,5 @@
       </div>
     </div>
   </div>
+
   <%- include('footer.ejs') %>
