--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -9,7 +9,7 @@
   </div>
   <div class="container mt-4">
     <div class="row justify-content-center">
-      <% if (fav.item.length===0) { %>
+      <% if (!fav || !fav.item || fav.item.length === 0) { %>
         <div class="col-md-12">
           <p class="text-center">Wishlist is empty.</p>
         </div>
