--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -29,8 +29,7 @@
           </div>
           <div class="text">
             <h2 class="text-uppercase">Free Shipping</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-              tincidunt fringilla.</p>
+            <p>Experience the convenience of free shipping on all orders! Your items will be delivered to your doorstep without any extra charges.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
@@ -39,8 +38,7 @@
           </div>
           <div class="text">
             <h2 class="text-uppercase">Free Returns</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-              tincidunt fringilla.</p>
+            <p>Shop confidently with our free returns policy! If you're not satisfied, return your items hassle-free within the specified period.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
@@ -49,8 +47,7 @@
           </div>
           <div class="text">
             <h2 class="text-uppercase">Customer Support</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-              tincidunt fringilla.</p>
+            <p>Get personalized assistance from our dedicated support team! Reach out to us for friendly and knowledgeable help with any questions or concerns.</p>
           </div>
         </div>
       </div>
@@ -145,10 +142,7 @@
         </div>
         <div class="col-md-12 col-lg-5 text-center pl-md-5">
           <h2><a href="#">50% less in all items</a></h2>
-          <p class="post-meta mb-4">By <a href="#">Carl Smith</a> <span class="block-8-sep">&bullet;</span> September 3,
-            2018</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam iste dolor accusantium facere corporis
-            ipsum animi deleniti fugiat. Ex, veniam?</p>
+          <p>Enjoy a whopping 50% discount on all items! This limited-time offer is your chance to grab your favorite products at unbeatable prices. Don't miss out on incredible savings across our entire range. Shop now and upgrade your wardrobe or home essentials while saving big!</p>
           <p><a href="/shop" class="btn btn-primary btn-sm">Shop Now</a></p>
         </div>
       </div>
