--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -36,16 +36,17 @@
           <img src="../static/images/still-life-with-classic-shirts-hanger_23-2150828574.avif" alt="Image placeholder"
             class="img-fluid rounded mb-4">
           <h3 class="font-weight-light  mb-0">Finding Your Perfect Dress</h3>
-          <p>Promo from nuary 15 &mdash; 25, 2019</p>
+          <p>Promo from April 05 &mdash; 25, 2024</p>
         </a>
       </div>
       <div class="col-md-6 col-lg-3">
         <div class="block-5 mb-5">
           <h3 class="footer-heading mb-4">Contact Info</h3>
           <ul class="list-unstyled">
-            <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-            <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-            <li class="email">emailaddress@domain.com</li>
+            <li class="address">
+              13th Cross, Madiwala, Bengaluru, India</li>
+            <li class="phone"><a href="tel://23923929210">+91 96059 12125</a></li>
+            <li class="email">vintageragsonline@gmail.com</li>
           </ul>
         </div>
 
@@ -59,20 +60,6 @@
           </form>
         </div>
       </div>
-    </div>
-    <div class="row pt-5 mt-5 text-center">
-      <div class="col-md-12">
-        <p>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;
-          <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
-            class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
-            class="text-primary">Colorlib</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </p>
-      </div>
-
     </div>
   </div>
 </footer>
