--- a/views/user/shop-single.ejs
+++ b/views/user/shop-single.ejs
@@ -16,31 +16,33 @@
   <div class="site-section">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 position-relative">
           <div id="productSlider" class="product-slider">
-            <% productOne.image.forEach((image, index)=> { %>
+              <% productOne.image.forEach((image, index)=> { %>
               <div class="slide <%= index === 0 ? 'active' : '' %>">
-                <a href="/<%= image %>" class="MagicZoom" id="Mag" style="width: 80%; height: auto;">
-                  <img src="/<%= image %>" alt="<%= productOne.name %> Image" class="img-fluid productImage" />
-                </a>
+                  <a href="/<%= image %>" class="MagicZoom" id="Mag" style="width: 80%; height: auto;">
+                      <img src="/<%= image %>" alt="<%= productOne.name %> Image" class="img-fluid productImage" />
+                  </a>
               </div>
               <% }); %>
           </div>
-          <div class="position-absolute bottom-0 start-50 translate-middle-x" style="left: calc(50% - 120px);">
-            <div class="d-flex justify-content-center">
-              <div class="rounded-circle bg-white p-2 mr-3">
-                <button class="btn btn-link" type="button" onclick="prevSlide()">
-                  <i class="fas fa-arrow-left text-primary"></i>
-                </button>
+          <br>
+          <br>
+          <div class="position-absolute bottom-0 translate-middle-x" style="left: 40%;">
+              <div class="d-flex justify-content-center">
+                  <div class="rounded-circle bg-white p-2 mr-3">
+                      <button class="btn btn-link" type="button" onclick="prevSlide()">
+                          <i class="fas fa-arrow-left text-primary"></i>
+                      </button>
+                  </div>
+                  <div class="rounded-circle bg-white p-2">
+                      <button class="btn btn-link" type="button" onclick="nextSlide()">
+                          <i class="fas fa-arrow-right text-primary"></i>
+                      </button>
+                  </div>
               </div>
-              <div class="rounded-circle bg-white p-2">
-                <button class="btn btn-link" type="button" onclick="nextSlide()">
-                  <i class="fas fa-arrow-right text-primary"></i>
-                </button>
-              </div>
-            </div>
           </div>
-        </div>
+      </div>
 
         <div class="col-md-6">
           <h2 class="text-black">
